# livekit-tts-fallback

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/images/: diagram-export-7-2-2026-4_46_56-PM.png:Zone.Identifier
examples/: elevenlabs_fallback.py  oci_speech_fallback.py
oracle/oracle/: __init__.py  llm.py  stt.py  tts.py  vad.py
scripts/: test_oci_speech_fallback.py  test_xai_recovery_window.py
src/livekit_tts_fallback/: __init__.py  capabilities.py  chain.py  errors.py
src/livekit_tts_fallback/providers/: __init__.py  elevenlabs.py  oci_speech.py  oci_xai.py
src/livekit_tts_fallback/transports/: __init__.py  connection_pool.py
src/oracle/: tts.py  utils.py
tests/: test_chain.py  test_connection_pool.py  test_oci_speech.py  test_oci_speech_streamed_format.py  test_oci_xai.py  test_oracle_tts.py  test_recovery.py  test_script_config.py
